# geol_mod

./: AG_examples.ipynb  Makefile  README.md  Shoc2.f90  Shock2.py  Shock2com.py  Shock_1.py  Shock_2.py  Vel.for  Vel.py  app.py  dataset.csv  dataset_crez.csv  dataset_rework.csv  edge_concentration.py  filtration_rates.py  main_counter.py  main_dataset.csv  map.py  model_class.py  output_1.txt  output_2.txt  output_3.txt  output_4.txt  package-lock.json  parameters.py  params.py  pyproject.toml  rework.py  shock2com.f90  start_parameters.py  stat.csv  test.py  test.txt  test_a.txt  velocity_calculation.py  vizualize.py
archive/: Rands_1.py  Vel.py  app.py  dataset.csv  dataset_crez.csv  vizualize.py
examples/: lognormal_par_1.csv  normal_par_1.csv
fortran/: Rands_1.f90  Shoc2.f90  Shoc2_new.for  Vel.for  ~$ны захвата и ЗСО.doc  Зоны захвата и ЗСО.doc  Изменения.docx
test_plots/: AG_examples.ipynb  test.ipynb  test_2.ipynb
