[tool.poetry]
name = "mod"
version = "0.1.0"
description = ""
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
