[tool.poetry]
name = "GEO_MOD"
version = "0.1.0"
description = ""
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
black = "^23.3.0"
imod = "^0.13.1"
seaborn = "^0.12.2"
fortran-language-server = "^1.12.0"
findent = "^4.2.6"
fprettify = "^0.3.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
